progress on profile page interactivity
